# cub3D

./: .gitignore  CMakeLists             .txt  CMakeLists.txt  Makefile  Makefile.1  README.md  cub3D.h  cub3d.h  errors.c  get_next_line.c  get_next_line_utils.c  i.cub  init_funcs.c  main.c  minilibx info  utils.c
get_next_line/: get_next_line.h  get_next_line_utils.c
libft/: Makefile
parser/: check_map_closed.c  errors.c  init_funcs.c  parse_info.c  parse_utils.c  parse_utils1.c  parse_utils2.c  parse_utils3.c  parsing.c
raycasting/: draw_sprites.c  draw_utils.c  draw_walls.c  events.c  raycasting_main.c
